Fix deprecated new Double() constructor across all Java samples
Replace new Double(x) with Double.valueOf(x) in all 24 affected sample
files (28 occurrences total, including commented-out examples).
Double(double) constructor has been deprecated since Java 9.