@@ -85,7 +85,7 @@ public class DOSetEC {
 		// details.
 		Invoice inv = new Invoice();
 		// Set Amount.
-		Currency amt = new Currency(new Double(25.00));
+		Currency amt = new Currency(Double.valueOf(25.00));
 		inv.setAmt(amt);
 		inv.setOrderDesc("This is my order description");
 
